--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,12 @@
+
 <a href="/api/french_spanish_translator">Traducteur Français vers Espagnol</a>
 </br>
 <a href="/api/french_english_translator">Traducteur Français vers Anglais</a>
 </br>
+<a href="/api/deutsh_french_translator">Traducteur Allemand vers Français</a>
+</br>
+<a href="/api/arameen_french_translator">Traducteur Aramméen vers Français</a>
+<br>
+<a href="/api/monlienversmestraductions">Liste de toutes les traductions</a>
+<br>
 <a href="/admin">Section administrateur</a>
